# rust_wordle

wordle/: Cargo.toml
wordle/console_interface/: Cargo.toml
wordle/console_interface/src/: lib.rs
wordle/guess/: Cargo.toml
wordle/guess/src/: lib.rs
wordle/src/: main.rs
wordle/word_dictionary/: Cargo.toml
wordle/word_dictionary/src/: lib.rs
